--- a/functions/package.json
+++ b/functions/package.json
@@ -16,8 +16,7 @@
     "cookie-parser": "^1.4.6",
     "firebase": "^9.6.11",
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1",
-    "universal-cookie-express": "^4.0.3"
+    "firebase-functions": "^3.14.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
